# guicpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
examples/: CMakeLists.txt  main.cpp
include/gui/: backend.h  gui.h
src/: backend_win32.cpp  emulator_actions.cpp  emulator_actions.h  emulator_state.h  gui.cpp  main.cpp  resources_generator.cpp
src/backend/: backend_win32.cpp
